--- a/Hide My Window/Forms/MainForm.resx
+++ b/Hide My Window/Forms/MainForm.resx
@@ -582,6 +582,163 @@
   <metadata name="imageListSmall.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>354, 17</value>
   </metadata>
+  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>585, 17</value>
+  </metadata>
+  <metadata name="actionImageListSmall.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>690, 17</value>
+  </metadata>
+  <data name="actionImageListSmall.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAC6
+        CwAAAk1TRnQBSQFMAgEBBQEAASABAAEgAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8ABgACBwHzPQABBwIA
+        Ae08AAHzAwAB7TwAAe0DAAHtPAAB7QMAAe0BAAETOgAB7QMAAe0B/wESOgAB7QMAAe0B/zsAAe0DAAHt
+        OgABEwH/Ae0CAAHtAf86AAETAf8C7QH/ARMB9zwAAf8BEz8AAfcBAAHvUgAMRwQAARYKRwEWEwACtAH/
+        DgAMRwQABUcCvQVHEwABtQGtAbQB/w0ABUcClAVHBAAFRwL0BUcHAAH0AfMB8AH0Af8HAAH/AbQBrQG0
+        Af8BBwK1AbwB8gH/BgAFRwL0BUcEAAVHAvQFRwUAAfIBzwWtAbUB8gYAAf8BtAGtAbQB8AStAc8BCQH/
+        BAAFRwIbBUcEAARHARYCAAEWBEcDAAH/AbUBrQG1AfABvAHyAfMB8AHPAa0BzwH0AwAB9AHPAfABtAGt
+        AbQB/wG8AfMB8AHPAa0BzwH0AwAFRwL/BUcEAARHAb0CAAGUBEcCAAH/AbQBzwHyAfQBzwKtAc8B9AEA
+        AfMBzwGtAQkBAAH0Ac8BrQHwAf8BtAGtAbQB8AGtAfMBAAHwAa0BzwH/AgAFRwL0BUcEAAVHAr0FRwIA
+        AbQBzwH0AQABtAG8AfQBtAGtAc8DAAEJAa0CtQGtAbwCAAHwAbQBrQG0AfABzwIAAfABrQG1AgAMRwQA
+        ARYKRwEWAgABtAHPAfQBAAGtAf8BAAG8Aq0B/wIAAQkBrQG0AfIBrQHPAfQB/wGtAf8BtAGtAbQB8AH/
+        AfQBzwGtAfICAAxHBQABFgFHAfQKAAH/AbQBzwHzAc8BtQG8Ac8CrQEAAfQBzwGtAbwCAAHyAq0BvAGt
+        AvIBtAGtAbQB9AKtAfIEAAEWAUcGAAFHARYGAAEWAUcB9AsAAf8BtQatAs8BrQHPAfQEAAH0Ac8ErQHw
+        AbQBrQG0AfAB9AUAARYBRwYAAUcBFgYAARYBRwH0BAAB/wH0Af8GAAHyAc8FrQG1AfIIAAHzAbUBzwKt
+        AfABtAGtAbQB/wUAARYBRwUAAf8BRwEWBgABlAFHARsEAAEbAUcBvQgAAfQB8wHwAfQB/xAAAf8BtAGt
+        AbQB/wQAAZQBRwEbBAABGwFHAZQGAAG9AUcBlAQAAZQBRwEaHgAB/wG0Aa0BtAQAAfQBRwEXAfQCAAH0
+        ARcBRwH0BgAB/wEXAUcBvQL/Ab0BRwEXAf8fAAH/AbQBzwUAARoCRwIXAkcBGwgAARsGRwEbKQAB9AEW
+        AkcBlAH0CgAB/wGUAhcBlAH/BQABQgFNAT4HAAE+AwABKAMAAUADAAEgAwABAQEAAQEGAAEBFgAD/wIA
+        AQMHAAEDBgABPwHzBgABPwHzBgABMQHzBgABMAHzBgABMAFzBgABOAEzBgABPAETBgABPgEDBgABPwED
+        BgABPwGDBwABAQ4AAf8B8AYAAf8B+AYABP8BwAEDAcABAwL/AY8B/wHAAQMBwAEDAv8BhwH/AcABAwHA
+        AQMB+AE/AYABDwHAAQMBwAEDAeABDwHAAQMBwAEDAcEBgwGAAQMBgAEBAcABAwHBAYMBAAEhAQABEAHA
+        AQMBwAEDARABOAIYAcABAwHAAQMBEgEYAgABwAEDAeMB/wEAASEBgAEBAucB4wH/AYABAwHAAQMC5wHj
+        AccB4AEPAfABAwHnAccB4wHHAfgBPwH/AcEB4wHHAeMBxwP/AuEBhwHgAQcD/wHxAfABDwHwAQ8E/wH4
+        AR8B+AEfCw==
+</value>
+  </data>
+  <metadata name="actionImageList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>857, 17</value>
+  </metadata>
+  <data name="actionImageList.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABq
+        EwAAAk1TRnQBSQFMAgEBBQEAASABAAEgAQABIAEAASABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABgAMAAUADAAEBAQABCAYAASAYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8ADQAC8n4A
+        AfICAAFtAe8B8oAAAe16AAFtBQAB7XkAAe8GAAHteAAB8gcAAe14AAHtBwAB7XgAAe0HAAHteAAB7QcA
+        Ae14AAHtBwAB7QIAAfB1AAHtBwAB7QIAAfB1AAHtBwAB7QIAAfB1AAHtBwAB7QIAAfB1AAHtBwAB7XgA
+        Ae0HAAHteAAB7QcAAe11AAHwAgAB7QYAARIB/3UAAfACAAHtBAABEgH/AQAB8nUAAfACAAHtAgABEgH/
+        AQAB8AEAAe11AAHwAgAB7QESAf8BAAHwAwAB73gAAf8BAAHwBAABQ3kAAfIFAAFDegAB7QQAAe96AAH/
+        Ae8CDwHvpQABFhZHARYIAAH0ARcURwEXAfRIAAEWFkcBFggAARcWRwEXJgAB8gGtAc8B8h4AARYWRwEW
+        CAAKRwEXAhoBFwpHJgAErQHyHQABFhZHARYIAApHAb0CAAG9CkcmAAHPBK0B8hwAARYWRwEWCAAKRwG9
+        AgABvQpHJgAB9AHPBK0B8hsAARYJRwEaAgABGglHARYIAApHAb0CAAG9CkcnAAH0Ac8ErQHyAgAB/wH0
+        AfADvAH0Af8QAAEWCUcBvQIAAb0JRwEWCAAKRwG9AgABvQpHDgAB9AG8AQcEtQG8AfMRAAH0Ac8ErQHy
+        AfQBzwetAc8BBwHzDQABFglHAb0CAAG9CUcBFggACkcBGgIAARoKRwsAAf8BCQHPCq0BtQHyDwAB9AHP
+        BK0B8gH0Ac8JrQHPAfALAAEWCUcBFgIAARYJRwEWCAAJRwGUBAABlAlHCQAB/wG8Ac8OrQHPAbwB/wwA
+        Af8B9AHPBK0B8gH0Ac8KrQHPAfQJAAEWCUcBFgIAARYJRwEWCAAJRwH/BAAB/wlHCAAB9AG0BK0BzwG8
+        AfMB9AH/AvQBvAG1Ba0BzwHyCgABvAGtAfIB9AHPBK0B8gEAAvQB/wH0AfIBtQatAbwIAAEWCUcB/wIA
+        Af8JRwEWCAAJRwH/BAAB/wlHBwAB8gStAbUB9AEAAfQBBwO1AfICAAH/AfIBzwStAbQB9AYAAf8BtQOt
+        AfIB9AHPBK0B8gH0Ac8BrQG1AfQBAAH/AfIBzwStAQcHAAEWCEcB4wQAAeMIRwEWCAAJRwEbBAABGglH
+        BgAB8gOtAc8B8wEAAf8BtQatAbQB/wMAAfIBzwStAbwFAAEHBK0BvAEAAfQBzwStAfIB9AHPAa0BzwHy
+        AgAB/wG8BK0BtQYAARYJRwH/AgAB/wlHARYIAAlHARcB8wIAAfMBFwlHBQAB8gOtAbQB/wIAAbQIrQHP
+        Af8EAAHwAc8DrQG1Af8CAAEHA60BzwH0AwAB9AHPBK0B8gH0Ac8BrQHPAfQDAAHzAc8DrQEHBQABFglH
+        ARYC9AEWCUcBFggAC0cCFwtHBAAB9AOtAbQB/wIAAfACrQG8AfQBvAWtAQcFAAH/AbUDrQHPAfQB8gOt
+        Ac8B9AQAAvQBzwStAfIB9AHPAa0BtQQAAfQBzwOtAfIEAAEWFkcBFggAARcWRwEXBAABzwKtAbQB/wMA
+        Ac8BrQG8AwAB8AWtAf8GAAHwA60BzwG1A60BvAQAAf8BrQHyAfQBzwStAfIB9AHPAa0B/wQAAQkDrQG1
+        BAABFhZHARYIAAH0ARcURwEXAfQEAAHPAq0BtAH/AgAB/wKtAf8EAAWtAfQGAAHwA60BzwH0Ac8DrQHy
+        AwAB9AKtAf8B9AHPBK0B8gH0Ac8B9AMAAQcDrQHPAfQEAAEWFkcBFgoAAfQDRwEWFQAB9AOtAbQB/wEA
+        AfQCrQHzAwAB/wWtAfQEAAH/AbUDrQHPAfQBAAHzBK0BBwIAAfQBrQG0AgAB9AHPBK0B8gL0AQAB/wEH
+        BK0B8wUAARYWRwEWCgAB9ANHARYWAAHyA60BtAH/AQACrQG0Af8BAAH/AbQFrQH0AwAB8AHPA60BtQH/
+        AwAB8gStAc8B9AH/Aa0BzwH/AgAB9AHPBK0B8gEAAfQBzwStAfIIAAEWA0cMAANHARYMAAH0A0cBFhcA
+        AfIDrQHPAfMBtAOtAbQGrQHPAgAB8gHPBK0BvAYAAfIFrQG1Ac8BrQHPAbUBzwHyAfQBzwStAfIB9AHP
+        Aq0BzwHyCQABFgNHDAADRwEWDAAB9ANHARYYAAHyBK0BzwqtAQkB8AHPBK0BtAH0CAAB9AHPCq0B8gH0
+        Ac8ErQHyAfQCzwH0CgABFgNHDAADRwEWDAAB9ANHARYZAAH0AbQSrQHPAfILAAH/AbwKrQHyAfQBzwSt
+        AfIC/wsAARYDRwwAA0cBFgwAAfQDRwEWCgAB/wGUARYBvQwAAf8BvAHPDq0BzwG8Af8OAAH/AbwBzwit
+        AfIB9AHPBK0B8gwAARYDRwwAA0cBFgwAAfQDRwEWCgABlANHAfQNAAH/AQkBzwqtAbUB8hQAAfMBvAG1
+        Bq0C9AHPBK0B8gsAAb0DRwH/CgAB/wNHAb0MAAH0A0cBFgoAARYDRwH0EAAB9AG8AQkEtQG8AfMB/yEA
+        AfQBzwStAfIKAAEaA0cBGwoAARsDRwEaDAAB/wNHARcB/wgAAf8ERwH/PAAB9AHPBK0B8gkAAf8DRwHj
+        Af8IAAH/AeMDRwH/DQAB4wNHAb0IAAG9A0cB4z4AAfQBzwStAfIJAAEWA0cBlAgAAZQDRwEWDgABvQRH
+        ARsGAAEbBEcBvT8AAfQBzwOtAc8JAAH/BEcBFgH0BAAB9AEWBEcB/w4AAf8BFwRHAZQB/wIAAf8BlARH
+        ARcB/0AAAfQBzwOtAf8JAAEbBUcB4wIWAeMFRwEbEAAB9A5HAf9CAAH0Ac8BrQG8CwABGgxHARoSAAEb
+        ARcKRwEXARtTAAH0AeMIRwHjAfQUAAH/ARYIRwEWAf9WAAHzAZQBFgJHARYBlAHzGAABGwGUAeMCRwHj
+        AZQB8wwAAUIBTQE+BwABPgMAASgDAAGAAwABQAMAAQEBAAEBBgABBBYAA/8EAAEPDwABDw8AAQ8PAAEP
+        DAABDwL/AQ8MAAEPAv8BDwwAAQ8C/wEPDAABDwL/AQ8MAAEPAT8B/wEPDAABDwEDAf8BDwwAAQ8BgQH/
+        AQ8MAAEPAYAB/wEPDAABDwGAAX8BDwwAAQ8BgAE/AQ8MAAEPAcABHwEPDAABDwHgAg8MAAEPAfABBwEP
+        DAABDwH4AQMBDwwAAQ8B/AEBAY8MAAEPAf4BAAHPDAABDwH/AQABbwwAAQ8B/wGAAT8MAAEPAf8BwAEf
+        DAABDwH/AeABDw4AATABBw4AARgBCw4AAQwBEQ4AAQYBIAwAA/8BQAwAA/8BgAwAA/8BwAwAA/8BwQwA
+        CP8B8AIAAQ8B8AIAAQ8I/wHwAgABDwHwAgABDwT/AcMD/wHwAgABDwHwAgABDwT/AcED/wHwAgABDwHw
+        AQEBgAEPBP8BwAP/AfACAAEPAfABAQGAAQ8E/wHAAX8C/wHwAQEBgAEPAfABAQGAAQ8E/wHgATABDwH/
+        AfABAQGAAQ8B8AEBAYABDwH/AcABHwH/AfABAAEBAf8B8AEBAYABDwHwAQEBgAEPAf4BAAEDAf8B+AIA
+        AX8B8AEBAYABDwHwAQMBwAEPAfgCAAF/AfgCAAEfAfABAQGAAQ8B8AEDAcABDwHwAgABPwHwAQIBAAEP
+        AfABAQGAAQ8B8AEDAcABDwHgASABYAEPAcABAAEIAQcB8AEDAcABDwHwAQMBwAEPAcABgAEcAQcBwAGA
+        AQYBAwHwAQEBgAEPAfABAQGAAQ8BgQGAAQ8BAQGBAcABAwGBAfACAAEPAfACAAEPAQMBAAEPAYABAwHA
+        AQMBwAHwAgABDwHwAgABDwEHARwBBwHgAQcBgAEBAeAB8AIAAQ8B8AIAAQ8BBgEeAQcB4AEDAYABAQHA
+        AfACAAEPAfwBHwL/AQIBHAEHAYABgQGMAgEB8AIAAQ8B/AEfAv8BgQEIAQcBAQHAAQYBAgEDAfwBPwH8
+        AT8B/AEfAv8BwAEAAQwBBwHgAgABBwH8AT8B/AE/AfwBHwL/AeACAAEPAfACAAEPAfwBPwH8AT8B/AEf
+        Av8B8AIAAT8B+AIAAR8B/AE/AfwBPwH8AR8B+AF/AfgCAAF/Af4CAAE/AfwBPwH8AT8B/AEfAfgBPwH+
+        AQABAwL/AcABAAEfAfwBHwH4AT8B/AEfAfgBPwH/AcABDwP/AfgBDwH8AR8B+AE/AfwBDwHwAT8G/wH8
+        AQcB/AEPAfABPwH+AQ8B8AF/Bv8B/gEDAf4BDwHwAX8B/gEHAeABfwf/AQMB/gEDAcABfwH+AQEBgAF/
+        B/8BgQH/AgAC/wIACP8BwwH/AYABAQL/AYABAQr/AcABAwL/AcABAwr/AfABDwL/AfABDwH/Cw==
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAgAEBAAAAEACABoBQAAhgAAABAQAAABACAAaAQAAO4FAAAYGAAAAQAIAMgGAABWCgAAGBgAAAEA
