--- a/Hide My Window/ActionResource.resx
+++ b/Hide My Window/ActionResource.resx
@@ -148,6 +148,12 @@
   <data name="show_small" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Images\show-small.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="tack" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>resources\images\tack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tack_small" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>resources\images\tack-small.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="unlockwindow" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Images\unlock.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
